Fixing color matching issue with navbar on mobile devices.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,7 @@
   --search-local-modal-background: #2b3137;
   --search-local-highlight-color: #409bc8;
   --ifm-card-background-color: #181d25;
+  --ifm-navbar-background-color: #181d25;
 }
 
 html[data-theme='dark'] {
